<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group11.tcss450.uw.edu.airportbuddy.dashboardFragments.AddFlightFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/flight_number"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"/>
        <EditText
            android:textAlignment="center"
            android:hint="@string/flight_number"
            android:id="@+id/flight_number_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/gate_number"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle" />
        <EditText
            android:hint="@string/gate_number"
            android:id="@+id/gate_number_et"
            android:textAlignment="center"
            android:inputType="number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saved_boarding_time"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/add_flight_boarding_time"
            android:hint="@string/saved_boarding_time"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/departure_time"
            android:id="@+id/departure_time_et"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"/>
        <TextView
            android:id="@+id/add_flight_departure_time"
            android:hint="@string/departure_time"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/arrival_time"
            android:id="@+id/arrival_time_et"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"/>
        <TextView
            android:id="@+id/add_flight_arrival_time"
            android:hint="@string/arrival_time"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EditTextStyle"/>
    </LinearLayout>

    <EditText
        android:id="@+id/location_to_et"
        android:hint="@string/landing_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/location_from_et"
        android:hint="@string/departing_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle"/>

    <Button
        android:id="@+id/confirm_add_flight"
        android:text="@string/add_flight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        style="@style/ButtonStyle"/>

</LinearLayout>
