<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="group11.tcss450.uw.edu.airportbuddy.startFragments.LoginFragment">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="200dp"
        android:text="@string/text_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/EditTextStyle"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="31dp"
        android:text="@string/text_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/usernameEdit"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_username"
        android:singleLine="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/usernameText"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/EditTextStyle"/>

    <EditText
        android:id="@+id/passwordEdit"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="textStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/passwordText"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        style="@style/ButtonStyle"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/usernameEdit"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        app:srcCompat="@drawable/icon_white" />

</android.support.constraint.ConstraintLayout>
