<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group11.tcss450.uw.edu.airportbuddy.dashboardFragments.AirportInputFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="16dp"
        android:animateLayoutChanges="true">


        <EditText
            android:id="@+id/current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/current_location"
            android:maxLines="1"
            android:textAlignment="center"
            style="@style/EditTextStyle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/current_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_current_location"
            android:padding="5dp"
            style="@style/ButtonStyle"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/current_location"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502" />

        <EditText
            android:id="@+id/airport_autocomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:completionHint="Enter Airport Alias"
            android:hint="@string/airport_code"
            android:maxLines="1"
            android:textAlignment="center"
            style="@style/EditTextStyle"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/current_location_button"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.501" />

        <Button
            android:id="@+id/airport_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            style="@style/ButtonStyle"
            android:layout_marginTop="0dp"
            app:layout_constraintTop_toBottomOf="@+id/airport_autocomplete"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
